# meshai-claude-code

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/meshai_cc/: cli.py  config.py  daemon.py  events.py  fsdetect.py  hooks.py  lock.py  paths.py  pricing.py  publisher.py  transcript.py  wal.py
src/meshai_cc/data/: anthropic_pricing.yaml
tests/: test_cli.py  test_fsdetect_lock.py  test_hook_latency.py  test_hooks.py  test_publisher_daemon.py  test_transcript_pricing.py  test_wal.py  test_wal_properties.py
